--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
+aniso8601==2.0.0
+astroid==1.5.3
 click==6.7
 Flask==0.12.2
+Flask-HTTPAuth==3.2.3
+Flask-Login==0.4.1
+Flask-RESTful==0.3.6
+Flask-SQLAlchemy==2.3.2
 gunicorn==19.7.1
+isort==4.2.15
 itsdangerous==0.24
 Jinja2==2.10
+lazy-object-proxy==1.3.1
 MarkupSafe==1.0
+mccabe==0.6.1
+passlib==1.7.1
+psycopg2==2.7.3.2
+pylint==1.7.4
+pytz==2017.3
+six==1.11.0
+SQLAlchemy==1.1.15
 Werkzeug==0.12.2
+wrapt==1.10.11
